fixed horizontal scrolling issue

--- a/wwwroot/css/menu.css
+++ b/wwwroot/css/menu.css
@@ -4,18 +4,20 @@
     background-position: center; 
     background-repeat: no-repeat;
     min-height: 100%; 
+    overflow-x: hidden;
 }
 
-body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); 
-    z-index: -1; 
-}
+    body::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: -1;
+        overflow-x: hidden;
+    }
 
 /*Since the header/nav is part of the body it removed the color by having the image - workaround*/
 header {
